# disk-nix

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/disk-nix-cli/: Cargo.toml
crates/disk-nix-cli/src/: main.rs  tests.rs
crates/disk-nix-cli/src/sections/: apply_io.rs  display_helpers.rs  entry.rs  graph_json.rs  inspect_plan_renderers.rs  install.rs  list_renderers.rs  migrations.rs  predicates.rs  probe_status.rs  run.rs  schema.rs  usage_details.rs
crates/disk-nix-cli/src/sections/usage_details/: bcache.rs  block_identity.rs  btrfs_vdo.rs  detail_keys.rs  device_mapper.rs  encryption.rs  filesystems.rs  general_smart.rs  lvm.rs  multipath_md.rs  network.rs  nvme.rs  xfs.rs  zfs.rs
crates/disk-nix-cli/src/tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs
crates/disk-nix-cli/src/tests/part_03/: complex_filesystems.rs  filesystems.rs  lvm_volumes.rs  usage_inspect.rs  zfs.rs
crates/disk-nix-exec/: Cargo.toml
crates/disk-nix-exec/src/: lib.rs  tests.rs
crates/disk-nix-exec/src/sections/: action_commands.rs  block_device_commands.rs  cache_network_commands.rs  command_helpers.rs  filesystem_commands.rs  model.rs  prepare.rs  recovery_actions.rs  recovery_domain_commands.rs  recovery_domain_targets.rs  recovery_roll_forward_inspection.rs  recovery_rollback_inspection.rs  rollback_recipes.rs  rollback_replay.rs  runtime.rs  target_lun_commands.rs  verification_commands.rs
crates/disk-nix-exec/src/sections/action_commands/: advanced_growth.rs  create_open.rs  destroy_lifecycle.rs  device_changes.rs  filesystems.rs  local_block.rs  network.rs  remove_rollback.rs
crates/disk-nix-exec/src/sections/block_device_commands/: disk_partition_swap.rs  loop_dm_zfs_nvme.rs  luks_vdo_lvm.rs  md_raid.rs
crates/disk-nix-exec/src/sections/cache_network_commands/: cache.rs  mounts.rs  nfs_exports_luks.rs  scsi_luns.rs  snapshots.rs
crates/disk-nix-exec/src/sections/filesystem_commands/: btrfs_properties.rs  device_topology.rs  filesystem_properties.rs  maintenance.rs  property_dispatch.rs
crates/disk-nix-exec/src/sections/recovery_domain_targets/: filesystems_partitions.rs  local_mappings.rs  luks.rs  lvm_cache_swap.rs  nfs.rs  snapshots_network.rs  target_luns.rs  zfs.rs
crates/disk-nix-exec/src/sections/rollback_recipes/: advanced_storage.rs  block_stack.rs  dispatcher.rs  filesystems.rs  helpers.rs  network_storage.rs  review.rs  safety_gates.rs
crates/disk-nix-exec/src/sections/target_lun_commands/: lio.rs  provider.rs  scst.rs  tgt.rs
crates/disk-nix-exec/src/sections/verification_commands/: filesystems_lvm.rs  lifecycle.rs  local_block.rs  network.rs  properties.rs  topology.rs
crates/disk-nix-exec/src/tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs  part_11.rs  part_12.rs  part_13.rs  part_14.rs  part_15.rs  part_16.rs  part_17.rs  part_18.rs  part_19.rs  part_20.rs
crates/disk-nix-exec/tests/: rollback_replay.rs
crates/disk-nix-model/: Cargo.toml
crates/disk-nix-model/src/: lib.rs
crates/disk-nix-plan/: Cargo.toml
crates/disk-nix-plan/src/: lib.rs  tests.rs
crates/disk-nix-plan/src/sections/: action_builders.rs  action_fields.rs  capabilities.rs  dependencies.rs  local_diagnostics.rs  mapping_diagnostics.rs  model.rs  operation_classification.rs  storage_diagnostics.rs  topology_properties.rs
crates/disk-nix-plan/src/sections/action_builders/: destroy.rs  lifecycle.rs  operations.rs  snapshots.rs
crates/disk-nix-plan/src/tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs  part_11.rs  part_12.rs  part_13.rs  part_14.rs  part_15.rs  part_16.rs
crates/disk-nix-probe/: Cargo.toml
crates/disk-nix-probe/src/: bcache.rs  bcachefs.rs  blkid.rs  btrfs.rs  cryptsetup.rs  dmsetup.rs  exfat.rs  ext.rs  f2fs.rs  findmnt.rs  iscsi.rs  lib.rs  loopdev.rs  lsblk.rs  lsscsi.rs  lvm.rs  mdraid.rs  multipath.rs  nfs.rs  ntfs.rs  nvme.rs  parted.rs  smartctl.rs  swaps.rs  tests.rs  udev.rs  vdo.rs  xfs.rs  zfs.rs  zram.rs
crates/disk-nix-probe/src/iscsi/: graph.rs  helpers.rs  nodes.rs  records.rs  sessions.rs
crates/disk-nix-probe/src/lvm/: helpers.rs  logical_volumes.rs  parse.rs  physical_volumes.rs  records.rs  segments.rs  volume_groups.rs
crates/disk-nix-probe/src/nvme/: graph.rs  helpers.rs  id_controller.rs  id_namespace.rs  list_subsystems.rs  smart_log.rs  tests.rs  types.rs
crates/disk-nix-probe/src/sections/: block_collectors.rs  filesystem_collectors.rs  lvm_remediation.rs  model.rs  network_collectors.rs  storage_collectors.rs  util.rs
crates/disk-nix-probe/src/tests/: part_01.rs  part_02.rs  part_03.rs
crates/disk-nix-probe/src/zfs/: graph.rs  helpers.rs  parsing.rs  tests.rs  types.rs
docs/: architecture.md  cli-plan-apply.md  (+15 more)
(+197 files in other folders)
