[workspace]
members = [
  "crates/disk-nix-cli",
  "crates/disk-nix-model",
  "crates/disk-nix-plan",
  "crates/disk-nix-probe",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/midischwarz12/disk-nix"
homepage = "https://github.com/midischwarz12/disk-nix"
description = "NixOS-native storage topology and lifecycle manager"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
