[package]
name = "disk-nix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line interface for disk-nix"
rust-version.workspace = true

[[bin]]
name = "disk-nix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.61", features = ["derive"] }
clap_complete = "4.5.61"
clap_mangen = "0.2.29"
disk-nix-exec = { path = "../disk-nix-exec" }
disk-nix-model = { path = "../disk-nix-model" }
disk-nix-plan = { path = "../disk-nix-plan" }
disk-nix-probe = { path = "../disk-nix-probe" }
serde_json = "1.0.150"

[lints]
workspace = true
