[package]
name = "disk-nix-plan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-aware storage planning for disk-nix"
rust-version.workspace = true

[dependencies]
disk-nix-model = { path = "../disk-nix-model" }

[lints]
workspace = true
